@@ -10,7 +10,7 @@
 \thispagestyle{empty}
 \section{How to setup input files}\label{sec:input}
 
-\noindent According to the methodological scheme of Sec.~\ref{section:run}, 
+\noindent According to the methodological scheme of Sec.~\ref{sec:run}, 
 it is necessary to use separate input files at
 the different step of the \WANT\ procedure.\\
 
@@ -29,7 +29,7 @@ of the details of each required input file.
 \noindent {\bf Step 1. i-ii:} {\tt pw.x}
 \\
 \noindent \WANT\ is currently interfaced with \PWSCF code. For the
-description of the input for steps 1-2 (Sec. \ref{section:run})
+description of the input for steps 1-2 (Sec. \ref{sec:run})
 and for further details see the \PWSCF manual at \PWSCFURL .\\
 
 \noindent {\bf Step 1. iii:}  {\tt pw\_export.x}
@@ -492,7 +492,7 @@ They are specified by the atomic index and the required angular momentum quantum
 \subsection{Input for electronic transport calculations}
 \noindent {\bf Step 3 : conductor.x}\\
 \noindent Both bulk and two-terminal calculations use similar input. 
-Labels follow the scheme of Sec.~\ref{section:run}.\\
+Labels follow the scheme of Sec.~\ref{sec:run}.\\
 
 \noindent Input file layout: \\
 
