@@ -748,6 +748,7 @@ unoccupied Bloch functions.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Conditioned localization and penalty functionals}
+\label{subsubsec:penalty}
 The above described formalism adopts a localization criterion which is 
 somehow {\it global}: the functional we want to minimize is the total spread, 
 while we are often interested in the localization of 
