@@ -74,9 +74,9 @@
 \newpage
 \input{want_input}
 
-% trouble shotting
+% trouble shootting
 \newpage
-\input{want_troubleshot}
+\input{want_troubleshoot}
 
 % Test suite
 \newpage
