@@ -1,12 +1,13 @@
 !
 ! Copyright (C) 2004 WanT Group
-! Copyright (C) 2002 Nicola Marzari, Ivo Souza, David Vanderbilt
-! Copyright (C) 1997 Nicola Marzari, David Vanderbilt
 !
 ! This file is distributed under the terms of the
 ! GNU General Public License. See the file `License'
 ! in the root directory of the present distribution,
 ! or http://www.gnu.org/copyleft/gpl.txt .
+!
+! Based on a previous version by I. Souza, N. Marzari and D. Vanderbilt
+! See the file README in the root directory for a full list of credits
 !
 !=====================================================
    PROGRAM wannier
