@@ -5,10 +5,12 @@
 
 
 -------------------------------------------------
-Date: 09 Dec 2005    Version: WanT-2.0.0
+Date: 13 Dec 2005    Version: WanT-2.0.0
 -------------------------------------------------
 
+
 13 Dec 2005      README.doc file updated; small corrections in the manual.(BB)
+                 manual updates. (AF)
 
 12 Dec 2005      README.input file updated; input for blc2wan.x added in the 
                  manual (BB). Further changes in the manual (AF).
